# ChangeLog for x11-misc/fbpanel
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.55 2013/08/26 19:07:52 jer Exp $

*fbpanel-6.1-r1 (26 Aug 2013)

  26 Aug 2013; Jeroen Roovers <jer@gentoo.org> +fbpanel-6.1-r1.ebuild,
  -files/fbpanel-6.0-configure-LANG.patch,
  +files/fbpanel-6.1-underlinking.patch:
  Respect CC. Fix underlinking. Install plugins into proper multilib-strict
  dir. Warn about missing /dev/mixer.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> fbpanel-6.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> fbpanel-6.1.ebuild:
  alpha stable wrt #337510

  24 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> fbpanel-6.1.ebuild:
  ppc64 stable wrt #337510

  14 Oct 2010; Brent Baude <ranger@gentoo.org> fbpanel-6.1.ebuild:
  stable ppc, bug 337510

  25 Sep 2010; Markus Meier <maekke@gentoo.org> fbpanel-6.1.ebuild:
  x86 stable, bug #337510

  21 Sep 2010; Markos Chandras <hwoarang@gentoo.org> fbpanel-6.1.ebuild:
  Stable on amd64 wrt bug #337510

  07 Aug 2010; Markos Chandras <hwoarang@gentoo.org> fbpanel-6.1.ebuild:
  Remove unused inherit eutils statement thanks to ssuominen for pointing
  this out

*fbpanel-6.1 (07 Aug 2010)

  07 Aug 2010; Markos Chandras <hwoarang@gentoo.org> +fbpanel-6.1.ebuild:
  Version bump

  05 Jun 2010; Raúl Porcel <armin76@gentoo.org> fbpanel-6.0.ebuild:
  alpha stable wrt #317787

  05 Jun 2010; Raúl Porcel <armin76@gentoo.org> fbpanel-6.0.ebuild:
  alpha stable wrt #317787

  24 May 2010; Pacho Ramos <pacho@gentoo.org> fbpanel-6.0.ebuild:
  stable amd64, bug 317787

  11 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> fbpanel-6.0.ebuild:
  x86 stable wrt bug #317787

  10 May 2010; nixnut <nixnut@gentoo.org> fbpanel-6.0.ebuild:
  ppc stable #317787

  25 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> fbpanel-6.0.ebuild,
  +files/fbpanel-6.0-configure-LANG.patch: