@@ -3,14 +3,14 @@ Hash: SHA256
 
 AUX fbpanel-6.1-underlinking.patch 789 SHA256 9f2681ef55a323313ed3a96083429762255ef88c23c00c339f8942c6ede4c5b5 SHA512 9c19199bc4f24ffe967b14dbee5165f78dccd120bc73f22e4846f083b4be3b92b60855f5ad08bdcb6d3b55b33a070a54e904cfdcc36786211d7d252dc7faac04 WHIRLPOOL f190ddb3e4efa7cac4732ea24dbca24d8877c49b146d9190926231a2ae5344937b4b107496a4f9aeb1c81f8faebd8045cf4aee351c75ac096f0b7795de9d652e
 DIST fbpanel-6.1.tbz2 190266 SHA256 e14542cc81ea06e64dd4708546f5fd3f5e01884c3e4617885c7ef22af8cf3965 SHA512 10ffa422d811725dff68f43af9735d79c7859114bdf06f49b05e0bc4b0fd5eb8a3ea196cd07753f261d60c0bd0716baa6d5a22c860dde6597c70bfcfb0f7078e WHIRLPOOL 362d4beaa383ad716a851d4fe1a5e583d635c300a0d97ba36d07e2709b8ca09cd6756c7bf8f7fc62508c547dc23c043b6ad0e90787dc629b3dda280d2b55e97e
-EBUILD fbpanel-6.1-r1.ebuild 1006 SHA256 ba6eb2ddf930d3733ad1388c2e821f39befd161de330e17de848ff6adccd5d1f SHA512 eb80ef6941b7bb40479ab05807b25d87b44dcab6c3e715dde52ede94f3ec849469588b87c3a900c11056570541bcc7707d5511941913553018d7dd791f49a72f WHIRLPOOL 2e091454e0747371fc6760f3c52d0a8f98d2c899009a4287d803e162432bf7e68430624f8a82509d759b6ee7bcecf130f620ca0706544d3428f3f0112cd5eeee
+EBUILD fbpanel-6.1-r1.ebuild 1062 SHA256 1b4babc1ab18f40fec70fd892b4e8bc1c525c885fa6c7414c18acd112bf94fda SHA512 7a6698e99170ddd8fdab8917e9867fc25f9283a35b9eb42a143a9cd185630e86f30ea0de86154cbbd1d0e3a3ccd6cc45dfca1d5bd2fb340dfc05c6c0214946ec WHIRLPOOL 6248df2549cb4a71c429459949f6aabee05630aeade304ba1e59335bc29b263af4c91d11360b962b1fabb3cc99057eab9669ee8ee396769430caf9c2a5bf58c8
 EBUILD fbpanel-6.1.ebuild 591 SHA256 1a72ebb8d56f926ee4078f00ac804014d46f686c2575575cfe2ec1739d1fccbe SHA512 ad5aed5c33cd860c448d21bdf167705bee26e88d627d0e1e37d5929ff6d2b98703b0481a609565c34bf4bef2e6c64ebe4ea2cd5d905465f6aa650d17c86e48df WHIRLPOOL 8c1e4dfdaaf2f27af844399d1af7ed3b3bd40bd79eb91ddd659400171821190f8430b99496484ccb390b321e12b9ce31616bfa5b58ff69c7c6f66d4d7ce8cb1b
-MISC ChangeLog 7112 SHA256 3006ae0d4f6811d51f73033043c668894f95047d4aacfa0433663c10f554d4b0 SHA512 3a968667d65278d233ce62bd9a0d785c38fdc00843fdb8d40ddce15fcee6fea8283d43f9c7d3c63be2b97550e7462fb55cb83a1dfc383479d9a650b6d2b8388a WHIRLPOOL e27d8e4d98685b74d7b54ec0f67c07380e3e79e23146c79fb6c6affeee4e9b33cafc51acdfdc0348ec0703651b386b0f211ee48c3998d0c3177aea2eb340f220
+MISC ChangeLog 7224 SHA256 08bcd8741cd72f8c6a1327ea50a7009a46386050e3615b9d4550efc315b0055b SHA512 170d6e5738bfc3a7aa71a806d9b00d8a5ef1d5048285771422152b356304efbf7416c5f54d4a740b2ada7454bfe3dfdf2d33e3c16b61e2218bf7add6cd74700e WHIRLPOOL f4b08cb8b00127dfad49f4f63bdc78fb95075ea1cd7f8be73adc805456ddf8304adf80a8da0560070bc5d0eb38ef7850841feb905465ea188e45aa431792ef5b
 MISC metadata.xml 167 SHA256 63163ddb9082af2890999b3c825b2d21df911f59611694e0e077e75a12bf7241 SHA512 381c3c70deed443ca617d0535541542579acffb8dde5f577acf789380f0cdec6d395fa6a45483978648fa2d4e9dab13a441ebdc95664f5f414efbcc812705754 WHIRLPOOL f4a9e5a69adee7e8ee1e5e7ba1b4b860c5060a80db845e0c7f12c96ab44a86dc81adb6aff76c5130b4ab2ffe5ea18f0a5afc9d87a61177d99a8fc9f49d7e9d6f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIbp4kACgkQVWmRsqeSphNSNACeJkwD4gw4nj4ryZKUfAYrE9jN
-WkcAnjSj8Dr023qE9yOsmdVsZ/QUBE25
-=FJE6
+iEYEAREIAAYFAlIbqbAACgkQVWmRsqeSphM/7ACePGl9XpFGs6Mwk2FJtOCWDOOD
+s3gAn1VB2J5XrPgIvrLvrSON8NahB1H1
+=FK7D
 -----END PGP SIGNATURE-----
