@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/fbpanel
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.55 2013/08/26 19:07:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.56 2013/08/26 19:17:03 jer Exp $
+
+  26 Aug 2013; Jeroen Roovers <jer@gentoo.org> fbpanel-6.1-r1.ebuild:
+  Use configure features instead of sed.
 
 *fbpanel-6.1-r1 (26 Aug 2013)
 
